--- a/quiddity.user.css
+++ b/quiddity.user.css
@@ -37,6 +37,7 @@
   .mw-body-content #siteSub {padding-left:35px;}
   .mw-body-content #xtools {padding-left:35px;}
   .mw-body .firstHeading {margin-left:35px;}
+  .mw-body .mw-specialpage-summary {margin-left:35px;}
   .mw-enhanced-rc {margin-left: 10px !important;} 
 /* Test ooui tweaks, smaller menu rows */
   .oo-ui-menuOptionWidget {padding: 0.2em;} 
