--- a/quiddity.user.css
+++ b/quiddity.user.css
@@ -14,7 +14,7 @@
 /* float the section-header links "[edit] [edit source]" to right, where they're less distracting */
   .mw-editsection  {float: right;} 
 /* bigger text in NavPopups gadget */
-  .navpopup {font-size: 0.875em;}
+  .navpopup {font-size: 0.875em; line-height: 140%;}
   .popup_menu {margin-top: 1.1em;}
 /* Change the color of the highlightmyname script */
   span.ais523hmn {background-color: #98FB98 !important;} 
