--- a/minimal-vector.user.css
+++ b/minimal-vector.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name        wikimedia minimal-vector style
 @namespace   StylishThemes
-@version     1.0.2
+@version     1.0.3
 @homepageURL https://github.com/quiddity-wp/wikimedia-style-tweaks
 @updateURL   https://raw.githubusercontent.com/quiddity-wp/wikimedia-style-tweaks/master/minimal-vector.user.css
 @license     CC-BY-SA-4.0
@@ -11,7 +11,7 @@
 /* NOTE: VECTOR SKIN is assumed. */
 /* test the minimal look */
   body {background-color: #fff;}
-  #mw-page-base {background-image: none;}
+  #mw-page-base {background-image: none; background-color: #fff;}
   div#content  {border: 1px solid #fff;}
   div.vectorTabs ul li  {background-image: none; background-color: #fff;}
   #p-views, #p-views *, #p-namespaces, #p-namespaces * {background-image: none;}
