--- a/quiddity.user.css
+++ b/quiddity.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name        wikimedia quiddity's various style tweaks
 @namespace   StylishThemes
-@version     1.0.16
+@version     1.0.17
 @homepageURL https://github.com/quiddity-wp/wikimedia-style-tweaks
 @updateURL   https://raw.githubusercontent.com/quiddity-wp/wikimedia-style-tweaks/master/quiddity.user.css
 @license     CC-BY-SA-4.0
@@ -86,5 +86,10 @@ domain("beta.wmflabs.org") {
     }
     h6 {
         font-size: 80% !important;
+    }
+    /* Fix new vector stuff */
+    .skin-vector-max-width .mw-page-container 
+        {
+         min-width:0; 
     }
 }
