--- a/staff.user.css
+++ b/staff.user.css
@@ -7,7 +7,26 @@
 @license     CC-BY-SA-4.0
 @author      quiddity-wp
 ==/UserStyle== */
-@-moz-document domain("wikipedia.org"), domain("meta.wikimedia.org"), domain("office.wikimedia.org"), domain("commons.wikimedia.org"), domain("species.wikimedia.org"), domain("outreach.wikimedia.org"), domain("wikimania.wikimedia.org"), domain("foundation.wikimedia.org"), domain("wikitech.wikimedia.org"), domain("wiktionary.org"), domain("mediawiki.org"), domain("wikisource.org"), domain("wikivoyage.org"), domain("wikibooks.org"), domain("wikinews.org"), domain("wikiversity.org"), domain("wikiquote.org"), domain("wikidata.org"), domain("beta.wmflabs.org") { 
+@-moz-document domain("wikipedia.org"), 
+  domain("meta.wikimedia.org"), 
+  domain("office.wikimedia.org"), 
+  domain("commons.wikimedia.org"), 
+  domain("species.wikimedia.org"), 
+  domain("outreach.wikimedia.org"), 
+  domain("wikimania.wikimedia.org"), 
+  domain("foundation.wikimedia.org"), 
+  domain("wikitech.wikimedia.org"), 
+  domain("wiktionary.org"), 
+  domain("mediawiki.org"), 
+  domain("wikisource.org"), 
+  domain("wikivoyage.org"), 
+  domain("wikibooks.org"), 
+  domain("wikinews.org"), 
+  domain("wikiversity.org"), 
+  domain("wikiquote.org"), 
+  domain("wikidata.org"), 
+  domain("beta.wmflabs.org"), 
+  domain("wikifunctions.org") { 
 /* NOTE: VECTOR SKIN is assumed. */
 /* Staff account, pink sidebar */
 body {background-color: #F7D7D7}
