--- a/minimal-vector.user.css
+++ b/minimal-vector.user.css
@@ -1,13 +1,25 @@
 /* ==UserStyle==
 @name        wikimedia minimal-vector style
 @namespace   StylishThemes
-@version     1.0.3
+@version     1.0.4
 @homepageURL https://github.com/quiddity-wp/wikimedia-style-tweaks
 @updateURL   https://raw.githubusercontent.com/quiddity-wp/wikimedia-style-tweaks/master/minimal-vector.user.css
 @license     CC-BY-SA-4.0
 @author      quiddity-wp
 ==/UserStyle== */
-@-moz-document domain("wikipedia.org"), domain("wikimedia.org"), domain("wiktionary.org"), domain("mediawiki.org"), domain("wikisource.org"), domain("wikivoyage.org"), domain("wikibooks.org"), domain("wikinews.org"), domain("wikiversity.org"), domain("wikiquote.org"), domain("wikidata.org"), domain("beta.wmflabs.org") { 
+@-moz-document domain("wikipedia.org"), 
+domain("wikimedia.org"), 
+domain("wiktionary.org"), 
+domain("mediawiki.org"), 
+domain("wikisource.org"), 
+domain("wikivoyage.org"), 
+domain("wikibooks.org"), 
+domain("wikinews.org"), 
+domain("wikiversity.org"), 
+domain("wikiquote.org"), 
+domain("wikidata.org"), 
+domain("beta.wmflabs.org"), 
+domain("wikifunctions.org") { 
 /* NOTE: VECTOR SKIN is assumed. */
 /* test the minimal look */
   body {background-color: #fff;}
