--- a/new-vector.css
+++ b/new-vector.css
@@ -1,9 +1,9 @@
 /* ==UserStyle==
-@name        wikimedia thinner sidebar
+@name        wikimedia new vector tweaks
 @namespace   StylishThemes
-@version     1.0.9
+@version     1.0.1
 @homepageURL https://github.com/quiddity-wp/wikimedia-style-tweaks
-@updateURL   https://raw.githubusercontent.com/quiddity-wp/wikimedia-style-tweaks/master/thinner-sidebar.user.css
+@updateURL   https://raw.githubusercontent.com/quiddity-wp/wikimedia-style-tweaks/master/new-vector.css
 @license     CC-BY-SA-4.0
 @author      quiddity-wp
 ==/UserStyle== */
