tweak corner button up

--- a/new-vector-whitespace.user.css
+++ b/new-vector-whitespace.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name        wikimedia new vector whitespace tweaks
 @namespace   StylishThemes
-@version     1.0.9
+@version     1.0.10
 @homepageURL https://github.com/quiddity-wp/wikimedia-style-tweaks
 @updateURL   https://raw.githubusercontent.com/quiddity-wp/wikimedia-style-tweaks/master/new-vector-whitespace.user.css
 @license     CC-BY-SA-4.0
@@ -34,5 +34,8 @@ domain("wikifunctions.org") {
   #ca-uls {padding: 0; width: 20px}
     
 /* remove header whitespace */
-  .mw-header {margin:0; padding-top:2px;}
+  .mw-header {margin:0; padding-top:0;}
+
+/* nudge sidebar-button up into corner */
+  #mw-sidebar-button {height:29px}
 }
